--- a/src/app/shared/components/form-control/form-control.component.html
+++ b/src/app/shared/components/form-control/form-control.component.html
@@ -1,9 +1,10 @@
-
-<label [for]="inputId" class="form-label" *ngIf="isLabel">{{lable}} <span *ngIf="isRequired" class="text-danger">*</span></label>
+<label [for]="inputId" class="form-label" *ngIf="isLabel">{{lable}} <span *ngIf="isRequired"
+        class="text-danger">*</span>
+</label>
 
 <div *ngIf="inputType=='input'">
-    <input type="text" [formControl]="control" class="form-control" [placeholder]="placeholder"
-        [maxlength]="maxlength" [minlength]="minlength" />
+    <input type="text" [formControl]="control" class="form-control" [placeholder]="placeholder" [maxlength]="maxlength"
+        [minlength]="minlength" />
 </div>
 
 <div *ngIf="inputType=='password'">
@@ -11,30 +12,27 @@
         [maxlength]="maxlength" [minlength]="minlength" />
 </div>
 
-
 <div *ngIf="inputType=='select'">
     <select [formControl]="control" [id]="inputId" class="form-select">
         <option *ngFor="let item of dropdownData" [value]="item.value">{{item.name}}</option>
     </select>
 </div>
 
-
-
 <div *ngIf="inputType=='date'">
-    <input type="text" [formControl]="control" class="form-control" [placeholder]="placeholder"
-        [maxlength]="maxlength" [minlength]="minlength" bsDatepicker />
+    <input type="text" [formControl]="control" class="form-control" [placeholder]="placeholder" [maxlength]="maxlength"
+        [minlength]="minlength" bsDatepicker />
 </div>
 
 <button [type]="btnType" class="btn" *ngIf="inputType=='submitbtn'" [ngClass]="cssClass">
     <mat-icon *ngIf="isIcon">{{maticon}}</mat-icon>
-    {{lable}}</button>
+    {{lable}}
+</button>
 
 <ng-container *ngIf="control.invalid && control.touched">
     <div *ngFor="let err of control.errors | keyvalue " class="text-danger fs-7">
-        {{errorMessage[err.key]}} {{err.value.requiredLength}} 
+        {{errorMessage[err.key]}} {{err.value.requiredLength}}
         <span *ngIf="err.value.requiredLength">
             characters long
         </span>
-        
     </div>
 </ng-container>
