Sidebar Implemention inprocess

--- a/src/app/shared/components/page-heading/page-heading.component.html
+++ b/src/app/shared/components/page-heading/page-heading.component.html
@@ -1,5 +1,5 @@
 <section class="p-10 without-menu inner-header divider layer-overlay overlay-dark heading-img">
-  <div class="container ">
+  <div class="container-fluid">
     <!-- Section Content -->
     <div class="section-content text-left">
       <div class="row">
