Reset Form Implemented and Menu

--- a/src/app/shared/components/form-control/form-control.component.html
+++ b/src/app/shared/components/form-control/form-control.component.html
@@ -23,7 +23,7 @@
         [minlength]="minlength" bsDatepicker />
 </div>
 
-<button [type]="btnType" class="btn" *ngIf="inputType=='submitbtn'" [ngClass]="cssClass">
+<button [type]="btnType" class="btn ps-5 pe-5" *ngIf="inputType=='submitbtn'" [ngClass]="cssClass">
     <mat-icon *ngIf="isIcon">{{maticon}}</mat-icon>
     {{lable}}
 </button>
