--- a/src/app/user-management/login/login.component.html
+++ b/src/app/user-management/login/login.component.html
@@ -1,9 +1,8 @@
 <app-header [isMenu]="false"></app-header>
 <main id="mainInner">
-
   <app-page-heading [pageHeading]="'Login'"></app-page-heading>
   <form [formGroup]="formGroup" (ngSubmit)="login()">
-    <div class="container">
+    <div class="container-fluid mt-2">
       <div class="row  justify-content-md-center">
         <div class="col-md-6 mt-5 mb-4">
           <div class="shadow rounded p-3 login-bg">
