--- a/src/app/shared/components/dialog/dialog.component.html
+++ b/src/app/shared/components/dialog/dialog.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{closeText}}</button>
-          <button type="button" class="btn btn-danger" (click)="callbackDelete.emit()">{{actionButtonText}}</button>
+          <button type="button" class="btn btn-danger" (click)="callback.emit()">{{actionButtonText}}</button>
         </div>
       </div>
     </div>
