--- a/src/styles.css
+++ b/src/styles.css
@@ -203,7 +203,7 @@ h6 {
   }
 
   .without-menu {margin-top: 130px;}
-  .heading-img {background: url(assets/img/banner1.jpg);}
+  
   .multiselect-dropdown .dropdown-btn {
     border: 1px solid #d5d4d4 !important;
     padding: 7px 12px !important;
@@ -241,3 +241,105 @@ h6 {
     padding-left: 10px !important;
     padding-right: 10px !important;
   }
+
+
+
+
+
+  /* Hamburger Menu */
+.hamburger-menu {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  margin: 0 15px;
+}
+
+.label-hamburger-menu {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  transition: 0.5s ease;
+}
+
+.label-hamburger-menu:hover .bar {
+  /* box-shadow: 1px 1px 7px 1px RGBa(0, 0, 0, 0.3); */
+}
+
+.label-hamburger-menu .bar {
+  width: 40px;
+  height: 4px;
+  background: #fff;
+  /* box-shadow: 1px 1px 3px RGBa(0, 0, 0, 0.4); */
+  border-radius: 1px;
+  transition: 0.4s ease;
+}
+
+.label-hamburger-menu .bar:not(:first-child) {
+  margin-top: 5px;
+}
+
+#checkbox-hamburger-menu {
+  display: none;
+}
+
+#checkbox-hamburger-menu:checked + .label-hamburger-menu {
+  transform: translate(-50%, -50%) rotateY(180deg);
+}
+
+#checkbox-hamburger-menu:checked + .label-hamburger-menu .bar {
+  width: 30px;
+  transform: rotateY(180deg) rotateX(360deg);
+}
+
+#checkbox-hamburger-menu:checked + .label-hamburger-menu .bar:first-child {
+  transform: translateY(9px) rotate(-45deg);
+}
+
+#checkbox-hamburger-menu:checked + .label-hamburger-menu .bar:nth-child(2) {
+  opacity: 0;
+}
+
+#checkbox-hamburger-menu:checked + .label-hamburger-menu .bar:nth-child(3) {
+  transform: translateY(-10px) rotate(45deg);
+}
+
+/* Content Section */
+.content-section {
+  position: relative;
+  height: 100vh;
+  left: 260px;
+  width: calc(100% - 260px);
+  transition: all 0.5s ease;
+  display: flex;
+  flex-direction: column;
+  margin-top: 180px;
+}
+
+.content-section .home-header {
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+
+.content-section .home-header .title {
+  color: white;
+  font-size: 35px;
+}
+
+.content-section .home-header .title {
+  font-size: 26px;
+  font-weight: 600;
+}
+
+.content-section .home-view {
+  /* height: 100%; */
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+}
+.login-bg {margin-top: 190px;}
