--- a/src/app/shared/components/file-upload/file-upload.component.html
+++ b/src/app/shared/components/file-upload/file-upload.component.html
@@ -7,8 +7,8 @@
 
 
 <div class="mb-3">
-    <label for="formFileSm" class="form-label">Default file input example</label>
-    <input class="form-control" id="formFileMd" type="file" (change)="onFileSelected($event)" #fileInput>
-    <button (click)="uploadFile()">Upload</button>
+    <label for="formFileSm" class="form-label">{{label}}</label>
+    <input class="form-control file-upload" id="formFileMd" type="file" (change)="onFileSelected($event)" #fileInput>
+    <button (click)="uploadFile()" class="btn btn-maroon upload-btn">Upload</button>
     <p *ngIf="error" class="error">{{ error }}</p>
   </div>
