--- a/src/app/shared/components/buttons/buttons.component.html
+++ b/src/app/shared/components/buttons/buttons.component.html
@@ -1,4 +1,4 @@
-<button [type]="btnType" class="btn" *ngIf="inputType=='submitbtn'" [ngClass]="cssClass">
+<button [type]="btnType" class="btn" [ngClass]="cssClass">
     <!-- <mat-icon *ngIf="isIcon">{{maticon}}</mat-icon> -->
     <i *ngIf="isIcon" [class]="maticon"></i>
     {{lable}}
