--- a/src/app/user-management/login/login.component.html
+++ b/src/app/user-management/login/login.component.html
@@ -18,7 +18,9 @@
                 [isRequired]="true" [minlength]="8"></app-form-control>
             </div>
             <div class="mb-3">
-              <app-form-control [lable]="'Login'" [inputType]="'submitbtn'" [isLabel]="false" ></app-form-control>
+              <app-buttons [lable]="'Login'" [btnType]="'submit'"  cssClass="btn-brown ps-4 pe-4" class="ms-2"
+              >
+            </app-buttons>
             </div>
           </div>
         </div>
