--- a/src/app/user-management/users/user-list/user-list.component.html
+++ b/src/app/user-management/users/user-list/user-list.component.html
@@ -2,27 +2,20 @@
 <main id="mainInner">
   <app-page-heading [pageHeading]="'User Registration'"></app-page-heading>
   <div class="container-fluid mt-2">
-
     <section class="content-section">
       <app-sidebar></app-sidebar>
       <div class="d-flex">
         <div class="">
-          <app-form-control [lable]="'+ Add A New User'" [btnType]="'button'" [inputType]="'submitbtn'"
+          <app-buttons [lable]="'+ Add A New User'" [btnType]="'button'"
             [isLabel]="false" cssClass="btn-orange" routerLink="add-user">
-          </app-form-control>
+          </app-buttons>
         </div>
         <div class="ms-auto ">
-          <app-export-pdf-excel (callbackExcel)="exportExcelData()" (callbackPdf)="exportPDFData()"></app-export-pdf-excel>
+          <app-export-pdf-excel (callbackExcel)="exportExcelData()"
+            (callbackPdf)="exportPDFData()"></app-export-pdf-excel>
         </div>
       </div>
       <div class="row">
-
-
-
-
-
-
-
         <div class="mt-2">
           <app-table [tableData]="userData" [tableColumns]="usersTableColumns" [isFilterable]="true" [isPageable]="true"
             [paginationSizes]="[5,10,25]" [defaultPageSize]="5" (sort)="sortData($event)" [rowActionIcon]="'edit'"
@@ -33,7 +26,6 @@
       </div>
     </section>
   </div>
-
   <div class="modal fade" id="dialogModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <app-dialog (callback)="delete()" [dialogContent]="userName" [closeText]="'Close'" [actionButtonText]="'Delete'"
       [dialogHeading]="'Confirm Delete'"></app-dialog>
