--- a/src/app/user-management/users/user-add-edit/user-add-edit.component.html
+++ b/src/app/user-management/users/user-add-edit/user-add-edit.component.html
@@ -4,8 +4,8 @@
   <div class="container-fluid mt-2">
     <section class="content-section">
       <app-sidebar></app-sidebar>
-      <form [formGroup]="formGroup">
-        <legend>Add A New User</legend>
+      <form [formGroup]="formGroup" class="add-edit-page">
+        <h2>{{pageTitle}}</h2>
         <div class="border p-3 rounded-top">
           <div class="row">
             <div class="col-md-4">
@@ -78,22 +78,22 @@
         </div>
         <div class="d-flex bd-highlight mb-3 mt-0 bg-light p-2 rounded-bottom border border-top-0">
           <div class="bd-highlight">
-            <app-form-control [lable]="'Back'" [btnType]="'button'" [inputType]="'submitbtn'" [isLabel]="false"
-              cssClass="btn-outline-danger" [routerLink]="['/list-user']" [queryParams]="{prop: 'back'}">
-            </app-form-control>
+            <app-buttons [lable]="'Back'" [btnType]="'button'" [isLabel]="false" cssClass="btn-outline-danger ps-4 pe-4"
+              [routerLink]="['/list-user']" [queryParams]="{prop: 'back'}">
+            </app-buttons>
           </div>
           <div class="ms-auto bd-highlight">
-            <app-form-control [lable]="'Reset'" [btnType]="'button'" [inputType]="'submitbtn'" [isLabel]="false"
-              cssClass="btn-dark" class="ms-2" (click)="openDialog()">
-            </app-form-control>
+            <app-buttons [lable]="'Reset'" [btnType]="'button'" [isLabel]="false" cssClass="btn-dark ps-4 pe-4" class="ms-2"
+              (click)="openDialog()">
+            </app-buttons>
 
-            <app-form-control [lable]="'Create'" [btnType]="'submit'" [inputType]="'submitbtn'" [isLabel]="false"
-              cssClass="btn-orange" class="ms-2" (click)="save()" *ngIf="route.snapshot.params['page'] != 'edit'">
-            </app-form-control>
+            <app-buttons [lable]="'Create'" [btnType]="'submit'" [isLabel]="false" cssClass="btn-orange ps-4 pe-4" class="ms-2"
+              (click)="save()" *ngIf="route.snapshot.params['page'] != 'edit'">
+            </app-buttons>
 
-            <app-form-control [lable]="'Update'" [btnType]="'submit'" [inputType]="'submitbtn'" [isLabel]="false"
-              cssClass="btn-orange" class="ms-2" (click)="update()" *ngIf="route.snapshot.params['page'] == 'edit'">
-            </app-form-control>
+            <app-buttons [lable]="'Update'" [btnType]="'submit'" [isLabel]="false" cssClass="btn-orange ps-4 pe-4" class="ms-2"
+              (click)="update()" *ngIf="route.snapshot.params['page'] == 'edit'">
+            </app-buttons>
 
 
 
