dialog Popup issue resolved

--- a/src/app/user-management/users/user-add-edit/user-add-edit.component.html
+++ b/src/app/user-management/users/user-add-edit/user-add-edit.component.html
@@ -106,7 +106,8 @@
     </section>
   </div>
 
-  <div class="modal fade" id="dialogModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" #dialogModal tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
     <app-dialog (callback)="reset()" [dialogContent]="resetForm" [closeText]="'Close'" [actionButtonText]="'OK'"
       [dialogHeading]="'Form Reset'"></app-dialog>
   </div>
