--- a/src/app/user-management/users/user-list/user-list.component.html
+++ b/src/app/user-management/users/user-list/user-list.component.html
@@ -6,8 +6,7 @@
       <app-sidebar></app-sidebar>
       <div class="d-flex">
         <div class="">
-          <app-buttons [lable]="'+ Add A New User'" [btnType]="'button'"
-            [isLabel]="false" cssClass="btn-orange" routerLink="add-user">
+          <app-buttons [lable]="'+ Add A New User'" [btnType]="'button'" cssClass="btn-orange" routerLink="add-user">
           </app-buttons>
         </div>
         <div class="ms-auto ">
