Clean Junk Code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,10 @@
-<!-- 
-<div class="alert alert-danger" *ngIf="displayErrorMsg" [ngClass]="{'show': displayErrorMsg}"
-style="position: absolute; z-index: 9999999; top: 0px; right: 0px; width: 100%; text-align: center;">
-   {{displayErrorMsg}}
-</div> -->
-
-
-
 <div  #clsoe class="alert alert-danger" [ngClass]="errorMessage ? 'show': 'alert' "  *ngIf="errorMessage | async"
 style="position: fixed; z-index: 9999999; top: 0px; right: 0px; width: 100%; text-align: center;">
    {{errorMessage | async}} <span class="close" (click)="removeCss(clsoe)">X</span>
 </div>
 
-<!-- <h1 style="margin-top: 90px;">ABC:{{errorMessage | async}}</h1> -->
-
-<!-- <h1  style="margin-top: 160px;"> ABC1:{{errorMessage | async}}</h1> -->
-
 <app-loading *ngIf="showLoading | async"></app-loading>
+
+<!-- <h1 style="position: absolute; z-index: 99999999999;"> Test: {{showLoading | async}}</h1> -->
+
 <router-outlet></router-outlet>
