--- a/src/styles.css
+++ b/src/styles.css
@@ -357,3 +357,4 @@ h6 {
   background-color: var(--light-maroon) !important; color: var(--white) !important;
 }
 .mat-simple-snackbar-action {color: #fff;}
+.btn-check:focus+.btn, .btn:focus {box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 0%) !important;}
